# chip8-rs

./: Cargo.toml  README.md
src/: chip8.rs  main.rs
